clean useless code